# fairgig-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dump-fairgig-202604181552.sql  pyproject.toml  render.yaml  runschemma.py  schema.sql  setup-node-services.py  testdb.py
.github/workflows/: ci.yml
docs/: PROJECT_DOCUMENTATION.md
services-node/analytics-service/: package-lock.json  package.json  server.js
services-node/analytics-service/src/: app.js
services-node/analytics-service/src/controllers/: analytics.controller.js
services-node/analytics-service/src/db/: pool.js
services-node/analytics-service/src/routes/: analytics.routes.js
services-node/certificate-service/: package-lock.json  package.json
services-node/certificate-service/src/: app.js
services-node/certificate-service/src/controllers/: certificate.controller.js
services-node/certificate-service/src/db/: pool.js
services-node/certificate-service/src/routes/: certificate.routes.js
services-node/grievance-service/: package-lock.json  package.json  server.js  testdb.js  verify-token.js
services-node/grievance-service/src/: app.js  grievances.js
services-node/grievance-service/src/db/: pool.js
services/anomaly-service/: main.py  schemas.py
services/auth/: README.md  app.py  models.py  routes.py
services/earnings/: README.md  app.py  models.py  routes.py
services/jobs/: README.md  app.py  models.py  routes.py  schemas.py
services/users/: README.md  app.py  models.py  routes.py  schemas.py
shared/: config.py  database.py  schemas.py  security.py  supabase_client.py
(+2 files in other folders)
